added omnitrix and hover animation

--- a/omnitrix.html
+++ b/omnitrix.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title> Its Hero Time </title>
     <link rel="stylesheet" href="style.css"/>
   </head>
+
   <body>
-    <p> Hello World</p>
+
+    <div class="frame">
+      <div class="main">
+        <div class="hour_glass">
+          <div class="hour1"></div>
+          <div class="hour2"></div>
+        </div>
+      </div>
+    </div>
+
   </body>
+
 </html>
